schema/testdata/validation_attribute_expression_unresolvable_rhs/schema.keel
model Post {
  fields {
    author Author
  }

  operations {
    update updatePost(id) with(title) {
      @set(post.title = post.subTitle)
    }

    // update posts set posts.title = posts.subTitle where posts.id = id
  }

  @permission(
    expression: post.author == post.auth,
    actions: [get]
  )
}

model Author {
  fields {
    posts Post[]
  }
}
